--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "aws-sdk": "^2.1692.0",
     "express": "^4.21.2",
+    "express-validator": "^7.2.1",
     "nodemod": "^3.0.6"
   },
   "type": "module"
