Added cloudwatch logs

--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "description": "",
   "dependencies": {
     "aws-sdk": "^2.1692.0",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.1.0",
     "nodemod": "^3.0.6"
   },
   "type": "module"
